--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -148,20 +148,20 @@ stages:
     #     versioningScheme: byBuildNumber
     #     packagesToPush: $(symbolsGlob)
 
-  # - job: releaseNuget
-  #   displayName: Push to nuget
-  #   workspace:
-  #     clean: all
-  #   steps:
-  #   - checkout: none
+  - job: releaseNuget
+    displayName: Push to nuget
+    workspace:
+      clean: all
+    steps:
+    - checkout: none
     
-  #   - download: current
-  #     patterns: $(PackageDownloadPatterns)
-  #     displayName: Download build artifact
+    - download: current
+      patterns: $(PackageDownloadPatterns)
+      displayName: Download build artifact
     
-  #   - task: DotNetCoreCLI@2
-  #     displayName: 'push package to nuget.org'
-  #     inputs:
-  #       command: custom
-  #       custom: nuget
-  #       arguments: 'push $(packageGlob) -s https://api.nuget.org/v3/index.json --api-key $(NuGetApiKey)'
+    - task: DotNetCoreCLI@2
+      displayName: 'push package to nuget.org'
+      inputs:
+        command: custom
+        custom: nuget
+        arguments: 'push $(packageGlob) -s https://api.nuget.org/v3/index.json --api-key $(NuGetApiKey)'
